--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,9 @@ jobs:
       with:
         inlineScript: >
           echo "Creating resources"
-
-          az deployment group create --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file '/github/workspace/Azure/main.bicep' --debug
+          ls
+          pwd
+          az deployment group create --resource-group ${{ env.RESOURCE_GROUP_NAME }} --template-file '/Azure/main.bicep' --debug
 
   build:
     runs-on: ubuntu-latest
